...
        android:text="ISBN"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/bookimg"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <Button
        android:id="@+id/fav"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
...
        app:layout_constraintBottom_toBottomOf="@+id/bookimg"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/bookimg"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/remove_fav"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
...
